Refactor write lock mechanism and refactor tx handling