@@ -10,12 +10,9 @@ import static io.vertx.core.http.HttpHeaders.CACHE_CONTROL;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 
 import javax.inject.Inject;
 import javax.inject.Singleton;
-
-import org.apache.commons.lang3.math.NumberUtils;
 
 import com.gentics.mesh.cli.BootstrapInitializer;
 import com.gentics.mesh.context.InternalActionContext;
@@ -33,6 +30,8 @@ import com.gentics.mesh.core.endpoint.node.NodeCrudHandler;
 import com.gentics.mesh.core.rest.error.NotModifiedException;
 import com.gentics.mesh.core.rest.node.NodeCreateRequest;
 import com.gentics.mesh.core.rest.node.NodeUpdateRequest;
+import com.gentics.mesh.core.verticle.handler.WriteLock;
+import com.gentics.mesh.core.verticle.handler.HandlerUtilities;
 import com.gentics.mesh.etc.config.AuthenticationOptions;
 import com.gentics.mesh.etc.config.MeshOptions;
 import com.gentics.mesh.graphdb.spi.Database;
@@ -41,9 +40,9 @@ import com.gentics.mesh.json.JsonUtil;
 import com.gentics.mesh.path.Path;
 import com.gentics.mesh.path.PathSegment;
 import com.gentics.mesh.util.ETag;
+import com.gentics.mesh.util.NumberUtils;
 
 import io.netty.handler.codec.http.HttpResponseStatus;
-import io.reactivex.Single;
 import io.vertx.core.http.HttpMethod;
 import io.vertx.core.logging.Logger;
 import io.vertx.core.logging.LoggerFactory;
@@ -68,15 +67,21 @@ public class WebRootHandler {
 
 	private final MeshOptions options;
 
+	private final WriteLock globalLock;
+
+	private final HandlerUtilities utils;
+
 	@Inject
 	public WebRootHandler(Database database, WebRootServiceImpl webrootService, BinaryFieldResponseHandler binaryFieldResponseHandler,
-		NodeCrudHandler nodeCrudHandler, BootstrapInitializer boot, MeshOptions options) {
+		NodeCrudHandler nodeCrudHandler, BootstrapInitializer boot, MeshOptions options, WriteLock globalLock, HandlerUtilities utils) {
 		this.db = database;
 		this.webrootService = webrootService;
 		this.binaryFieldResponseHandler = binaryFieldResponseHandler;
 		this.nodeCrudHandler = nodeCrudHandler;
 		this.boot = boot;
 		this.options = options;
+		this.globalLock = globalLock;
+		this.utils = utils;
 	}
 
 	/**
@@ -88,73 +93,73 @@ public class WebRootHandler {
 		InternalActionContext ac = new InternalRoutingActionContextImpl(rc);
 		String path = rc.request().path().substring(
 			rc.mountPoint().length());
-		MeshAuthUser requestUser = ac.getUser();
-		db.asyncTx(() -> {
 
-			String branchUuid = ac.getBranch().getUuid();
-			// Load all nodes for the given path
-			Path nodePath = webrootService.findByProjectPath(ac, path);
-			if (!nodePath.isFullyResolved()) {
-				throw error(NOT_FOUND, "node_not_found_for_path", decodeSegment(nodePath.getTargetPath()));
-			}
-			PathSegment lastSegment = nodePath.getLast();
+		try (WriteLock lock = globalLock.lock(ac)) {
+			utils.syncTx(ac, tx -> {
+				MeshAuthUser requestUser = ac.getUser();
 
-			// Check whether the path actually points to a valid node
-			if (lastSegment == null) {
-				throw error(NOT_FOUND, "node_not_found_for_path", decodeSegment(path));
-			}
-			NodeGraphFieldContainer container = lastSegment.getContainer();
-			if (container == null) {
-				throw error(NOT_FOUND, "node_not_found_for_path", decodeSegment(path));
-			}
-
-			String version = ac.getVersioningParameters().getVersion();
-			Node node = container.getParentNode();
-			addCacheControl(rc, node, version);
-			requestUser.failOnNoReadPermission(container, branchUuid, version);
-
-			rc.response().putHeader(MeshHeaders.WEBROOT_NODE_UUID, node.getUuid());
-			//TODO decide whether we want to add also lang, version
-
-			GraphField field = lastSegment.getPathField();
-			if (field instanceof BinaryGraphField) {
-				BinaryGraphField binaryField = (BinaryGraphField) field;
-				String sha512sum = binaryField.getBinary().getSHA512Sum();
-
-				// Check the etag
-				String etagKey = sha512sum;
-				if (binaryField.hasProcessableImage()) {
-					etagKey += ac.getImageParameters().getQueryParameters();
+				String branchUuid = ac.getBranch().getUuid();
+				// Load all nodes for the given path
+				Path nodePath = webrootService.findByProjectPath(ac, path);
+				if (!nodePath.isFullyResolved()) {
+					throw error(NOT_FOUND, "node_not_found_for_path", decodeSegment(nodePath.getTargetPath()));
 				}
-				String etag = ETag.hash(etagKey);
-				ac.setEtag(etag, false);
-				if (ac.matches(etag, false)) {
-					return Single.error(new NotModifiedException());
-				} else {
+				PathSegment lastSegment = nodePath.getLast();
+
+				// Check whether the path actually points to a valid node
+				if (lastSegment == null) {
+					throw error(NOT_FOUND, "node_not_found_for_path", decodeSegment(path));
+				}
+				NodeGraphFieldContainer container = lastSegment.getContainer();
+				if (container == null) {
+					throw error(NOT_FOUND, "node_not_found_for_path", decodeSegment(path));
+				}
+
+				String version = ac.getVersioningParameters().getVersion();
+				Node node = container.getParentNode();
+				addCacheControl(rc, node, version);
+				requestUser.failOnNoReadPermission(container, branchUuid, version);
+
+				rc.response().putHeader(MeshHeaders.WEBROOT_NODE_UUID, node.getUuid());
+				// TODO decide whether we want to add also lang, version
+
+				GraphField field = lastSegment.getPathField();
+				if (field instanceof BinaryGraphField) {
+					BinaryGraphField binaryField = (BinaryGraphField) field;
+					String sha512sum = binaryField.getBinary().getSHA512Sum();
+
+					// Check the etag
+					String etagKey = sha512sum;
+					if (binaryField.hasProcessableImage()) {
+						etagKey += ac.getImageParameters().getQueryParameters();
+					}
+					String etag = ETag.hash(etagKey);
+					ac.setEtag(etag, false);
+					if (ac.matches(etag, false)) {
+						throw new NotModifiedException();
+					}
 					binaryFieldResponseHandler.handle(rc, binaryField);
-					return Single.just(Optional.empty());
-				}
-			} else {
-				String etag = node.getETag(ac);
-				ac.setEtag(etag, true);
-				if (ac.matches(etag, true)) {
-					return Single.error(new NotModifiedException());
+					return null;
 				} else {
+					String etag = node.getETag(ac);
+					ac.setEtag(etag, true);
+					if (ac.matches(etag, true)) {
+						throw new NotModifiedException();
+					}
 					// Use the language for which the node was resolved
 					List<String> languageTags = new ArrayList<>();
 					languageTags.add(lastSegment.getLanguageTag());
 					languageTags.addAll(ac.getNodeParameters().getLanguageList(options));
 					ac.setWebrootResponseType("node");
-					return node.transformToRest(ac, 0, languageTags.toArray(new String[0])).map(model -> Optional.of(model));
+					return node.transformToRestSync(ac, 0, languageTags.toArray(new String[0]));
 				}
-			}
-
-		}).subscribe(result -> {
-			if (result.isPresent()) {
-				ac.send(JsonUtil.toJson(result.get()),
-					HttpResponseStatus.valueOf(NumberUtils.toInt(rc.data().getOrDefault("statuscode", "").toString(), OK.code())));
-			}
-		}, ac::fail);
+			}, model -> {
+				if (model != null) {
+					ac.send(JsonUtil.toJson(model),
+						HttpResponseStatus.valueOf(NumberUtils.toInt(rc.data().getOrDefault("statuscode", "").toString(), OK.code())));
+				}
+			});
+		}
 
 	}
 
@@ -200,62 +205,66 @@ public class WebRootHandler {
 		InternalActionContext ac = new InternalRoutingActionContextImpl(rc);
 		String path = rc.request().path().substring(
 			rc.mountPoint().length());
-		String uuid = db.tx(() -> {
 
-			// Load all nodes for the given path
-			Path nodePath = webrootService.findByProjectPath(ac, path);
-			if (nodePath.isPrefixMismatch()) {
-				throw error(NOT_FOUND, "webroot_error_prefix_invalid", decodeSegment(path), ac.getBranch().getPathPrefix());
-			}
+		String uuid = null;
+		try (WriteLock lock = globalLock.lock(ac)) {
+			uuid = db.tx(() -> {
 
-			// Check whether path could be resolved at all
-			if (nodePath.getResolvedPath() == null) {
-				throw error(NOT_FOUND, "node_not_found_for_path", decodeSegment(nodePath.getTargetPath()));
-			}
-
-			PathSegment lastSegment = nodePath.getLast();
-			List<PathSegment> segments = nodePath.getSegments();
-
-			// Update Node
-			if (nodePath.isFullyResolved()) {
-				NodeGraphFieldContainer container = lastSegment.getContainer();
-				NodeUpdateRequest request = ac.fromJson(NodeUpdateRequest.class);
-				// We can deduce a missing the language via the path
-				if (request.getLanguage() == null) {
-					String lang = container.getLanguageTag();
-					log.debug("Using deduced language of container: " + lang);
-					request.setLanguage(lang);
-				}
-				ac.setBody(request);
-				return container.getParentNode().getUuid();
-			} else {
-				int diff = nodePath.getInitialStack().size() - nodePath.getSegments().size();
-				if (diff > 1) {
-					String resolvedPath = nodePath.getResolvedPath();
-					throw error(NOT_FOUND, "webroot_error_parent_not_found", resolvedPath);
+				// Load all nodes for the given path
+				Path nodePath = webrootService.findByProjectPath(ac, path);
+				if (nodePath.isPrefixMismatch()) {
+					throw error(NOT_FOUND, "webroot_error_prefix_invalid", decodeSegment(path), ac.getBranch().getPathPrefix());
 				}
 
-				// Deduce parent node
-				NodeCreateRequest request = ac.fromJson(NodeCreateRequest.class);
+				// Check whether path could be resolved at all
+				if (nodePath.getResolvedPath() == null) {
+					throw error(NOT_FOUND, "node_not_found_for_path", decodeSegment(nodePath.getTargetPath()));
+				}
 
-				// Deduce parent node
-				if (request.getParentNode() == null || request.getParentNode().getUuid() == null) {
-					Node parentNode = null;
-					if (segments.size() == 0) {
-						parentNode = ac.getProject().getBaseNode();
-					} else {
-						PathSegment parentSegment = segments.get(segments.size() - 1);
-						parentNode = parentSegment.getContainer().getParentNode();
+				PathSegment lastSegment = nodePath.getLast();
+				List<PathSegment> segments = nodePath.getSegments();
+
+				// Update Node
+				if (nodePath.isFullyResolved()) {
+					NodeGraphFieldContainer container = lastSegment.getContainer();
+					NodeUpdateRequest request = ac.fromJson(NodeUpdateRequest.class);
+					// We can deduce a missing the language via the path
+					if (request.getLanguage() == null) {
+						String lang = container.getLanguageTag();
+						log.debug("Using deduced language of container: " + lang);
+						request.setLanguage(lang);
 					}
-					String parentUuid = parentNode.getUuid();
-					log.debug("Using deduced parent node uuid: " + parentUuid);
-					request.setParentNodeUuid(parentUuid);
+					ac.setBody(request);
+					return container.getParentNode().getUuid();
+				} else {
+					int diff = nodePath.getInitialStack().size() - nodePath.getSegments().size();
+					if (diff > 1) {
+						String resolvedPath = nodePath.getResolvedPath();
+						throw error(NOT_FOUND, "webroot_error_parent_not_found", resolvedPath);
+					}
+
+					// Deduce parent node
+					NodeCreateRequest request = ac.fromJson(NodeCreateRequest.class);
+
+					// Deduce parent node
+					if (request.getParentNode() == null || request.getParentNode().getUuid() == null) {
+						Node parentNode = null;
+						if (segments.size() == 0) {
+							parentNode = ac.getProject().getBaseNode();
+						} else {
+							PathSegment parentSegment = segments.get(segments.size() - 1);
+							parentNode = parentSegment.getContainer().getParentNode();
+						}
+						String parentUuid = parentNode.getUuid();
+						log.debug("Using deduced parent node uuid: " + parentUuid);
+						request.setParentNodeUuid(parentUuid);
+					}
+					ac.put(WEBROOT_LAST_SEGMENT, nodePath.getInitialStack().firstElement());
+					ac.setBody(request);
+					return null;
 				}
-				ac.put(WEBROOT_LAST_SEGMENT, nodePath.getInitialStack().firstElement());
-				ac.setBody(request);
-				return null;
-			}
-		});
+			});
+		}
 
 		if (uuid != null) {
 			nodeCrudHandler.handleUpdate(ac, uuid);
